<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/bild_course_enrolledin"
                android:id="@+id/textViewBild_course_enrolledin"
                android:textColor="@color/white" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkbox_b_minus_bius"
                android:id="@+id/checkBoxB_minus_bius" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/antioch_school_course_enrolledin"
                android:id="@+id/textViewAntioch_school_course_enrolledin"
                android:layout_column="0"
                android:textColor="@color/white" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkbox_b_minus_antioch_school"
                android:id="@+id/checkBox2B_minus_antioch_school" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkbox_m_minus_antioch_school"
                android:id="@+id/checkBoxM_minus_antioch_school" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkbox_d_minus_antioch_school"
                android:id="@+id/checkBoxD_minus_antioch_school" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_training_progress_record"
                android:id="@+id/textViewTraining_progress_record"
                android:layout_column="0"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"
                android:textSize="20dp"
                android:layout_marginBottom="5dp" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="middle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/course"
                android:id="@+id/textViewTitle"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/modules"
                android:id="@+id/textViewModules"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner12" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/books_complete"
                android:id="@+id/textViewBooks_complete"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner13" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lesson_complete"
                android:id="@+id/textViewLesson_complete"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner14" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cohort_id"
                android:id="@+id/textViewCohort_id"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText17"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cohort_leader"
                android:id="@+id/textViewCohort_leader"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText18"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/associate_faculty"
                android:id="@+id/textViewAssociate_faculty"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText2"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/certified_leader"
                android:id="@+id/textViewCertified_leader"
                android:layout_column="0"
                android:textColor="@color/white"
                android:layout_marginBottom="3dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="3dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText19"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/eportfolio_username"
                android:id="@+id/textVieweportfolio_username"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText20"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/eportfolio_password"
                android:id="@+id/textVieweportfolio_password"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:singleLine="true"
                android:id="@+id/editText21"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/certification_status"
                android:id="@+id/textViewCertification_status"
                android:layout_column="0"
                android:textColor="@color/white"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rd_btn_certified"
                    android:id="@+id/radio_Button_Certified" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_certified"
                    android:id="@+id/radioButton_Not_certified" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date_of_enrollment"
                android:id="@+id/textViewDate_of_enrollment"
                android:layout_column="0"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText22" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date_of_assessment"
                android:id="@+id/textViewDate_of_assessment"
                android:layout_column="0"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText23" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date_of_certification"
                android:id="@+id/textViewDate_of_certification"
                android:layout_column="0"
                android:textColor="@color/white" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText24" />

        </TableRow>


    </TableLayout>


</LinearLayout>